--- a/src/view/LieferantAnlegen.form
+++ b/src/view/LieferantAnlegen.form
@@ -67,8 +67,8 @@
                           </Group>
                           <EmptySpace min="-2" pref="56" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                              <Component id="jtfGPID_LieferantAnlegen" alignment="0" pref="150" max="32767" attributes="0"/>
-                              <Component id="jtfKreditlimit_LieferantAnlegen" alignment="0" max="32767" attributes="0"/>
+                              <Component id="jtfGPID_LieferantAnlegen" alignment="0" min="-2" pref="150" max="-2" attributes="0"/>
+                              <Component id="jtfKreditlimit_LieferantAnlegen" alignment="0" min="-2" pref="150" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace max="32767" attributes="0"/>
                       </Group>
@@ -125,10 +125,10 @@
                   </Group>
                   <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="jbSpeichern_LieferantAnlegen" alignment="3" min="-2" pref="35" max="-2" attributes="0"/>
-                      <Component id="jbAbbrechen_LieferantAnlegen" alignment="3" min="-2" pref="35" max="-2" attributes="0"/>
+                      <Component id="jbSpeichern_LieferantAnlegen" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
+                      <Component id="jbAbbrechen_LieferantAnlegen" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="67" max="32767" attributes="0"/>
+                  <EmptySpace pref="71" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -206,7 +206,9 @@
           <Properties>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
               <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-                <TitledBorder title="Rechnungsdaten"/>
+                <TitledBorder title="Rechnungsdaten">
+                  <Font PropertyName="font" name="Tahoma" size="14" style="0"/>
+                </TitledBorder>
               </Border>
             </Property>
           </Properties>
@@ -216,7 +218,7 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                      <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" alignment="0" attributes="0">
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Component id="jLabel130" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -226,10 +228,10 @@
                               </Group>
                               <EmptySpace min="-2" pref="42" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="jtfNameRG_LieferantAnlegen" alignment="1" max="32767" attributes="0"/>
-                                  <Component id="jtfVornameRG_LieferantAnlegen" alignment="1" max="32767" attributes="0"/>
-                                  <Component id="jtfFirmaRG_LieferantAnlegen" alignment="0" max="32767" attributes="0"/>
-                                  <Component id="jcbAnredeRG_LieferantAnlegen" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="jtfNameRG_LieferantAnlegen" alignment="1" min="-2" pref="190" max="-2" attributes="0"/>
+                                  <Component id="jtfVornameRG_LieferantAnlegen" alignment="1" min="-2" pref="190" max="-2" attributes="0"/>
+                                  <Component id="jtfFirmaRG_LieferantAnlegen" alignment="0" min="-2" pref="190" max="-2" attributes="0"/>
+                                  <Component id="jcbAnredeRG_LieferantAnlegen" alignment="0" min="-2" pref="190" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
@@ -240,21 +242,23 @@
                               </Group>
                               <EmptySpace type="separate" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Group type="102" alignment="1" attributes="0">
-                                      <Component id="jtfStraßeRG_LieferantAnlegen" max="32767" attributes="0"/>
-                                      <EmptySpace max="-2" attributes="0"/>
-                                      <Component id="jtfHNrRG_LieferantAnlegen" min="-2" pref="47" max="-2" attributes="0"/>
+                                  <Component id="jtfStaatRG_LieferantAnlegen" alignment="0" min="-2" pref="190" max="-2" attributes="0"/>
+                                  <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
+                                      <Group type="102" alignment="0" attributes="0">
+                                          <Component id="jtfPlzRG_LieferantAnlegen" min="-2" pref="60" max="-2" attributes="0"/>
+                                          <EmptySpace max="-2" attributes="0"/>
+                                          <Component id="jtfOrtRG_LieferantAnlegen" max="32767" attributes="0"/>
+                                      </Group>
+                                      <Group type="102" attributes="0">
+                                          <Component id="jtfStraßeRG_LieferantAnlegen" min="-2" pref="139" max="-2" attributes="0"/>
+                                          <EmptySpace max="-2" attributes="0"/>
+                                          <Component id="jtfHNrRG_LieferantAnlegen" min="-2" pref="42" max="-2" attributes="0"/>
+                                      </Group>
                                   </Group>
-                                  <Group type="102" alignment="0" attributes="0">
-                                      <Component id="jtfPlzRG_LieferantAnlegen" min="-2" pref="60" max="-2" attributes="0"/>
-                                      <EmptySpace max="-2" attributes="0"/>
-                                      <Component id="jtfOrtRG_LieferantAnlegen" pref="131" max="32767" attributes="0"/>
-                                  </Group>
-                                  <Component id="jtfStaatRG_LieferantAnlegen" alignment="0" max="32767" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
-                      <EmptySpace max="32767" attributes="0"/>
+                      <EmptySpace pref="54" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -441,7 +445,9 @@
           <Properties>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
               <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-                <TitledBorder title="Kontakt"/>
+                <TitledBorder title="Kontakt">
+                  <Font PropertyName="font" name="Tahoma" size="14" style="0"/>
+                </TitledBorder>
               </Border>
             </Property>
           </Properties>
@@ -458,9 +464,9 @@
                       </Group>
                       <EmptySpace pref="21" max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Component id="jtfTel_LieferantAnlegen" alignment="0" pref="150" max="32767" attributes="0"/>
-                          <Component id="jtfFax_LieferantAnlegen" alignment="0" max="32767" attributes="0"/>
-                          <Component id="jtfEmail_LieferantAnlegen" alignment="0" max="32767" attributes="0"/>
+                          <Component id="jtfTel_LieferantAnlegen" alignment="0" min="-2" pref="190" max="-2" attributes="0"/>
+                          <Component id="jtfFax_LieferantAnlegen" alignment="0" min="-2" pref="190" max="-2" attributes="0"/>
+                          <Component id="jtfEmail_LieferantAnlegen" alignment="0" min="-2" pref="190" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
