--- a/src/view/ArtikelAnzeige.form
+++ b/src/view/ArtikelAnzeige.form
@@ -99,15 +99,15 @@
                                   </Group>
                               </Group>
                               <Group type="102" alignment="1" attributes="0">
-                                  <Component id="jbSpeichern_ArtikelAnzeigen" min="-2" max="-2" attributes="0"/>
+                                  <Component id="jbSpeichern_ArtikelAnzeigen" min="-2" pref="130" max="-2" attributes="0"/>
                                   <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="jbbearbeiten_ArtikelAnzeigen" min="-2" max="-2" attributes="0"/>
+                                  <Component id="jbbearbeiten_ArtikelAnzeigen" min="-2" pref="130" max="-2" attributes="0"/>
                                   <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="jbabbrechen_ArtikelAnzeigen" min="-2" max="-2" attributes="0"/>
+                                  <Component id="jbabbrechen_ArtikelAnzeigen" min="-2" pref="130" max="-2" attributes="0"/>
                               </Group>
                               <Group type="102" alignment="0" attributes="0">
                                   <Group type="103" groupAlignment="0" attributes="0">
-                                      <Component id="jtfbestelltext_ArtikelAnzeigen" alignment="0" min="-2" pref="286" max="-2" attributes="0"/>
+                                      <Component id="jtfbestelltext_ArtikelAnzeigen" alignment="0" min="-2" pref="300" max="-2" attributes="0"/>
                                       <Component id="jLabel51" alignment="0" min="-2" max="-2" attributes="0"/>
                                       <Group type="102" alignment="0" attributes="0">
                                           <EmptySpace min="-2" pref="173" max="-2" attributes="0"/>
@@ -135,7 +135,7 @@
                                   <EmptySpace min="-2" pref="108" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
                                       <Component id="jLabel140" min="-2" max="-2" attributes="0"/>
-                                      <Component id="jtfartikeltext_ArtikelAnzeigen" min="-2" pref="286" max="-2" attributes="0"/>
+                                      <Component id="jtfartikeltext_ArtikelAnzeigen" min="-2" pref="300" max="-2" attributes="0"/>
                                       <Group type="102" alignment="0" attributes="0">
                                           <Group type="103" groupAlignment="1" max="-2" attributes="0">
                                               <Group type="102" attributes="0">
@@ -158,7 +158,7 @@
                                   </Group>
                               </Group>
                           </Group>
-                          <EmptySpace pref="630" max="32767" attributes="0"/>
+                          <EmptySpace pref="613" max="32767" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
@@ -188,7 +188,7 @@
                       <Component id="jLabel43" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jtfartikelname_ArtikelAnzeigen" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="12" max="32767" attributes="0"/>
+                  <EmptySpace pref="15" max="32767" attributes="0"/>
                   <Component id="jSeparator5" min="-2" pref="10" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="jLabel44" min="-2" max="-2" attributes="0"/>
@@ -199,7 +199,7 @@
                       <Component id="jLabel47" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jtfreserviert_ArtikelAnzeigen" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace type="separate" pref="22" max="32767" attributes="0"/>
+                  <EmptySpace type="separate" pref="24" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="jtfzulauf_ArtikelAnzeigen" alignment="0" min="-2" max="-2" attributes="0"/>
                       <Group type="103" alignment="0" groupAlignment="3" attributes="0">
@@ -217,10 +217,10 @@
                   </Group>
                   <EmptySpace min="-2" pref="2" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="jtfartikeltext_ArtikelAnzeigen" alignment="3" min="-2" pref="96" max="-2" attributes="0"/>
-                      <Component id="jtfbestelltext_ArtikelAnzeigen" alignment="3" min="-2" pref="96" max="-2" attributes="0"/>
+                      <Component id="jtfartikeltext_ArtikelAnzeigen" alignment="3" min="-2" pref="100" max="-2" attributes="0"/>
+                      <Component id="jtfbestelltext_ArtikelAnzeigen" alignment="3" min="-2" pref="100" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace type="separate" pref="22" max="32767" attributes="0"/>
+                  <EmptySpace type="separate" pref="24" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel51" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jLabel52" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -246,9 +246,9 @@
                   </Group>
                   <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="jbSpeichern_ArtikelAnzeigen" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jbbearbeiten_ArtikelAnzeigen" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jbabbrechen_ArtikelAnzeigen" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jbSpeichern_ArtikelAnzeigen" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
+                      <Component id="jbbearbeiten_ArtikelAnzeigen" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
+                      <Component id="jbabbrechen_ArtikelAnzeigen" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="127" max="-2" attributes="0"/>
               </Group>
@@ -274,6 +274,9 @@
         </Component>
         <Component class="javax.swing.JTextField" name="jtfbestellwertnetto_ArtikelAnzeigen">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="14" style="0"/>
+            </Property>
             <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
               <Dimension value="[6, 25]"/>
             </Property>
@@ -307,11 +310,21 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="jtfbestelltext_ArtikelAnzeigen">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="14" style="0"/>
+            </Property>
+          </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jtfbestelltext_ArtikelAnzeigenActionPerformed"/>
           </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="jtfartikeltext_ArtikelAnzeigen">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="14" style="0"/>
+            </Property>
+          </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel55">
           <Properties>
@@ -399,6 +412,9 @@
         </Component>
         <Component class="javax.swing.JTextField" name="jtfeinzelwertnetto_ArtikelAnzeigen">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="14" style="0"/>
+            </Property>
             <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
               <Dimension value="[6, 25]"/>
             </Property>
@@ -409,6 +425,9 @@
         </Component>
         <Component class="javax.swing.JTextField" name="jtfbestellwertbrutto_ArtikelAnzeigen">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="14" style="0"/>
+            </Property>
             <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
               <Dimension value="[6, 25]"/>
             </Property>
@@ -419,6 +438,9 @@
         </Component>
         <Component class="javax.swing.JTextField" name="jtffrei_ArtikelAnzeigen">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="14" style="0"/>
+            </Property>
             <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
               <Dimension value="[6, 25]"/>
             </Property>
@@ -429,6 +451,9 @@
         </Component>
         <Component class="javax.swing.JTextField" name="jtfzulauf_ArtikelAnzeigen">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="14" style="0"/>
+            </Property>
             <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
               <Dimension value="[6, 25]"/>
             </Property>
@@ -439,6 +464,9 @@
         </Component>
         <Component class="javax.swing.JTextField" name="jtfartikelname_ArtikelAnzeigen">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="14" style="0"/>
+            </Property>
             <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
               <Dimension value="[6, 25]"/>
             </Property>
@@ -469,6 +497,9 @@
         </Component>
         <Component class="javax.swing.JTextField" name="jtfreserviert_ArtikelAnzeigen">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="14" style="0"/>
+            </Property>
             <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
               <Dimension value="[6, 25]"/>
             </Property>
@@ -499,6 +530,9 @@
         </Component>
         <Component class="javax.swing.JTextField" name="jtfverkauft_ArtikelAnzeigen">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="14" style="0"/>
+            </Property>
             <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
               <Dimension value="[6, 25]"/>
             </Property>
@@ -509,6 +543,9 @@
         </Component>
         <Component class="javax.swing.JTextField" name="jtfeinzelwertbrutto_ArtikelAnzeigen">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="14" style="0"/>
+            </Property>
             <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
               <Dimension value="[6, 25]"/>
             </Property>
