--- a/src/view/ArtikelSuche.form
+++ b/src/view/ArtikelSuche.form
@@ -35,11 +35,11 @@
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <EmptySpace min="0" pref="662" max="32767" attributes="0"/>
+          <EmptySpace min="0" pref="679" max="32767" attributes="0"/>
           <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
               <Group type="102" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="ArtikelSuche" pref="644" max="32767" attributes="0"/>
+                  <Component id="ArtikelSuche" pref="653" max="32767" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
@@ -59,18 +59,12 @@
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace min="-2" pref="232" max="-2" attributes="0"/>
-                  <Component id="jbAnzeigen_ArtikelSuche" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
-                  <Component id="jbAbbrechen_ArtikelSuche" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="jLabel57" min="-2" max="-2" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
-                  <Component id="jcbArtikelID_ArtikelSuche" min="-2" max="-2" attributes="0"/>
+                  <Component id="jcbArtikelID_ArtikelSuche" min="-2" pref="150" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="131" max="-2" attributes="0"/>
-                  <Component id="jbSuchen_ArtikelSuche" min="-2" max="-2" attributes="0"/>
+                  <Component id="jbSuchen_ArtikelSuche" min="-2" pref="130" max="-2" attributes="0"/>
               </Group>
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace min="-2" pref="358" max="-2" attributes="0"/>
@@ -80,6 +74,12 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="jScrollPane3" min="-2" pref="655" max="-2" attributes="0"/>
+              </Group>
+              <Group type="102" alignment="0" attributes="0">
+                  <EmptySpace min="-2" pref="378" max="-2" attributes="0"/>
+                  <Component id="jbAnzeigen_ArtikelSuche" min="-2" pref="130" max="-2" attributes="0"/>
+                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                  <Component id="jbAbbrechen_ArtikelSuche" min="-2" pref="130" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -93,15 +93,15 @@
                   <EmptySpace min="-2" pref="38" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel57" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jbSuchen_ArtikelSuche" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jcbArtikelID_ArtikelSuche" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jbSuchen_ArtikelSuche" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
+                      <Component id="jcbArtikelID_ArtikelSuche" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
                   <Component id="jScrollPane3" min="-2" max="-2" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="jbAnzeigen_ArtikelSuche" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jbAbbrechen_ArtikelSuche" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jbAnzeigen_ArtikelSuche" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
+                      <Component id="jbAbbrechen_ArtikelSuche" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="32767" attributes="0"/>
               </Group>
@@ -111,11 +111,17 @@
       <SubComponents>
         <Component class="javax.swing.JLabel" name="jLabel57">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="16" style="0"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Artikel-ID:"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="jbAnzeigen_ArtikelSuche">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="16" style="0"/>
+            </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/view/anzeigen.png"/>
             </Property>
@@ -127,6 +133,9 @@
         </Component>
         <Component class="javax.swing.JButton" name="jbSuchen_ArtikelSuche">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="16" style="0"/>
+            </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/view/lupe.png"/>
             </Property>
@@ -161,6 +170,9 @@
         </Container>
         <Component class="javax.swing.JButton" name="jbAbbrechen_ArtikelSuche">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="16" style="0"/>
+            </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/view/abbruch2.png"/>
             </Property>
@@ -173,7 +185,7 @@
         <Component class="javax.swing.JLabel" name="jLabel38">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Tahoma" size="18" style="0"/>
+              <Font name="Tahoma" size="24" style="0"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Artikel Suche"/>
           </Properties>
@@ -182,6 +194,9 @@
         </Component>
         <Component class="javax.swing.JComboBox" name="jcbArtikelID_ArtikelSuche">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="14" style="0"/>
+            </Property>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="5">
                 <StringItem index="0" value=""/>
