--- a/src/view/AuftragAnlegen.form
+++ b/src/view/AuftragAnlegen.form
@@ -54,13 +54,13 @@
                       <Group type="102" alignment="1" attributes="0">
                           <Group type="103" groupAlignment="1" attributes="0">
                               <Group type="102" alignment="1" attributes="0">
-                                  <Component id="jSpeichern_aa" min="-2" max="-2" attributes="0"/>
+                                  <Component id="jSpeichern_aa" min="-2" pref="130" max="-2" attributes="0"/>
                                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                                  <Component id="jbAbbrechen_aa" min="-2" max="-2" attributes="0"/>
+                                  <Component id="jbAbbrechen_aa" min="-2" pref="130" max="-2" attributes="0"/>
                               </Group>
                               <Component id="Auftragsposition_AuftragAnlegen" alignment="0" min="-2" pref="866" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace pref="235" max="32767" attributes="0"/>
+                          <EmptySpace max="32767" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="1" attributes="0">
                           <Group type="103" groupAlignment="1" max="-2" attributes="0">
@@ -76,10 +76,10 @@
                                           </Group>
                                           <EmptySpace min="-2" pref="39" max="-2" attributes="0"/>
                                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                              <Component id="jtfGPname_aa" alignment="0" max="32767" attributes="0"/>
-                                              <Component id="jtfGPID_aa" alignment="0" max="32767" attributes="0"/>
-                                              <Component id="jtfAuftragsid_aa" alignment="1" max="32767" attributes="0"/>
-                                              <Component id="jcbStatus" alignment="0" pref="150" max="32767" attributes="0"/>
+                                              <Component id="jtfGPname_aa" alignment="0" min="-2" pref="150" max="-2" attributes="0"/>
+                                              <Component id="jtfGPID_aa" alignment="0" min="-2" pref="150" max="-2" attributes="0"/>
+                                              <Component id="jtfAuftragsid_aa" alignment="1" min="-2" pref="150" max="-2" attributes="0"/>
+                                              <Component id="jcbStatus" alignment="0" min="-2" pref="150" max="-2" attributes="0"/>
                                           </Group>
                                       </Group>
                                       <Component id="jLabel25" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -117,28 +117,28 @@
                   <EmptySpace min="-2" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jtfAuftragsid_aa" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jtfAuftragsid_aa" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                       <Component id="jLabel19" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jcbAuftragsart" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jcbAuftragsart" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" min="-2" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jtfGPID_aa" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jtfGPID_aa" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                       <Component id="jLabel21" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jftfErfassungsdatum_aa" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel17" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jtfGPname_aa" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jtfGPname_aa" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                       <Component id="jLabel22" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jftfLieferdatum_aa" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel73" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jcbStatus" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jcbStatus" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                       <Component id="jLabel41" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jftfAbschlussdatum_AuftragAnlegen" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                   </Group>
@@ -150,10 +150,10 @@
                   <Component id="Auftragsposition_AuftragAnlegen" min="-2" max="-2" attributes="0"/>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="jbAbbrechen_aa" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jSpeichern_aa" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jbAbbrechen_aa" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
+                      <Component id="jSpeichern_aa" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="42" max="32767" attributes="0"/>
+                  <EmptySpace pref="36" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -169,6 +169,9 @@
         </Component>
         <Component class="javax.swing.JButton" name="jbAbbrechen_aa">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="16" style="0"/>
+            </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/view/abbruch2.png"/>
             </Property>
@@ -363,14 +366,14 @@
                                       </Group>
                                       <EmptySpace min="-2" pref="95" max="-2" attributes="0"/>
                                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                          <Component id="jtfPositionsID_AuftragAnlegen" alignment="0" pref="150" max="32767" attributes="0"/>
-                                          <Component id="jtfArtikelID_AuftragAnlegen" alignment="0" max="32767" attributes="0"/>
+                                          <Component id="jtfPositionsID_AuftragAnlegen" alignment="0" min="-2" pref="150" max="-2" attributes="0"/>
+                                          <Component id="jtfArtikelID_AuftragAnlegen" alignment="0" min="-2" pref="150" max="-2" attributes="0"/>
                                       </Group>
                                   </Group>
                                   <Group type="102" alignment="0" attributes="0">
                                       <Component id="jLabel23" min="-2" max="-2" attributes="0"/>
                                       <EmptySpace min="-2" pref="95" max="-2" attributes="0"/>
-                                      <Component id="jtfArtikelname_AuftragAnlegen" max="32767" attributes="0"/>
+                                      <Component id="jtfArtikelname_AuftragAnlegen" min="-2" pref="150" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
                               <EmptySpace max="-2" attributes="0"/>
@@ -588,6 +591,9 @@
         </Container>
         <Component class="javax.swing.JButton" name="jSpeichern_aa">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="16" style="0"/>
+            </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/view/speichern2.png"/>
             </Property>
