--- a/src/view/AuftragAnzeigen.form
+++ b/src/view/AuftragAnzeigen.form
@@ -39,7 +39,7 @@
           <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
               <Group type="102" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="AuftragAnzeigen" pref="808" max="32767" attributes="0"/>
+                  <Component id="AuftragAnzeigen" pref="812" max="32767" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
@@ -238,11 +238,11 @@
                   <Component id="jScrollPane1" min="-2" pref="128" max="-2" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="jbZurueck_az" alignment="3" min="-2" pref="35" max="-2" attributes="0"/>
-                      <Component id="jbBearbeiten_az" alignment="3" min="-2" pref="35" max="-2" attributes="0"/>
-                      <Component id="jbSpeichern_az" alignment="3" min="-2" pref="35" max="-2" attributes="0"/>
+                      <Component id="jbZurueck_az" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
+                      <Component id="jbBearbeiten_az" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
+                      <Component id="jbSpeichern_az" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="36" max="32767" attributes="0"/>
+                  <EmptySpace pref="49" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -448,6 +448,11 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="jtfZKID_az">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="14" style="0"/>
+            </Property>
+          </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jtfZKID_azActionPerformed"/>
           </Events>
@@ -521,6 +526,11 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="jtfAuftragswertbrutto_az">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="14" style="0"/>
+            </Property>
+          </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jlAuftragswertnetto_az">
           <Properties>
@@ -531,6 +541,11 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="jtfAuftragswertnetto_az">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="14" style="0"/>
+            </Property>
+          </Properties>
         </Component>
         <Component class="javax.swing.JSeparator" name="jSeparator2">
         </Component>
