--- a/src/view/LieferantBearbeiten.form
+++ b/src/view/LieferantBearbeiten.form
@@ -39,7 +39,7 @@
           <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
               <Group type="102" attributes="0">
                   <EmptySpace min="-2" pref="4" max="-2" attributes="0"/>
-                  <Component id="LieferantBearbeiten" pref="277" max="32767" attributes="0"/>
+                  <Component id="LieferantBearbeiten" pref="281" max="32767" attributes="0"/>
                   <EmptySpace min="-2" pref="5" max="-2" attributes="0"/>
               </Group>
           </Group>
@@ -63,7 +63,7 @@
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Group type="102" alignment="0" attributes="0">
                                   <EmptySpace min="-2" pref="356" max="-2" attributes="0"/>
-                                  <Component id="jbzurueck_LieferantBearbeiten" min="-2" max="-2" attributes="0"/>
+                                  <Component id="jbzurueck_LieferantBearbeiten" min="-2" pref="130" max="-2" attributes="0"/>
                               </Group>
                               <Group type="102" alignment="0" attributes="0">
                                   <EmptySpace min="-2" pref="346" max="-2" attributes="0"/>
@@ -86,7 +86,7 @@
                   <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
                   <Component id="jSeparator18" min="-2" pref="10" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="165" max="-2" attributes="0"/>
-                  <Component id="jbzurueck_LieferantBearbeiten" min="-2" max="-2" attributes="0"/>
+                  <Component id="jbzurueck_LieferantBearbeiten" min="-2" pref="30" max="-2" attributes="0"/>
                   <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
@@ -103,6 +103,9 @@
         </Component>
         <Component class="javax.swing.JButton" name="jbzurueck_LieferantBearbeiten">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="16" style="0"/>
+            </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/view/zur&#xfc;ck.png"/>
             </Property>
