--- a/src/view/LieferantSuchen.form
+++ b/src/view/LieferantSuchen.form
@@ -35,11 +35,11 @@
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <EmptySpace min="0" pref="497" max="32767" attributes="0"/>
+          <EmptySpace min="0" pref="513" max="32767" attributes="0"/>
           <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
               <Group type="102" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="LieferantSuchen" pref="483" max="32767" attributes="0"/>
+                  <Component id="LieferantSuchen" pref="487" max="32767" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
@@ -69,7 +69,7 @@
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace max="-2" attributes="0"/>
-                          <Component id="jcbSuchkriterium_LieferantSuchen" min="-2" max="-2" attributes="0"/>
+                          <Component id="jcbSuchkriterium_LieferantSuchen" min="-2" pref="120" max="-2" attributes="0"/>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
                           <Component id="jtfSuchkriterium_LieferantSuchen" min="-2" pref="150" max="-2" attributes="0"/>
                       </Group>
@@ -80,9 +80,9 @@
                   <Group type="103" groupAlignment="1" attributes="0">
                       <Group type="102" alignment="1" attributes="0">
                           <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-                          <Component id="jbAnzeigen_LieferantSuchen" min="-2" pref="117" max="-2" attributes="0"/>
+                          <Component id="jbAnzeigen_LieferantSuchen" min="-2" pref="150" max="-2" attributes="0"/>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                          <Component id="jbAbbrechen_LieferantSuchen" min="-2" max="-2" attributes="0"/>
+                          <Component id="jbAbbrechen_LieferantSuchen" min="-2" pref="150" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="1" attributes="0">
                           <EmptySpace max="-2" attributes="0"/>
@@ -102,15 +102,15 @@
                   <Component id="jSeparator14" min="-2" pref="10" max="-2" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="jcbSuchkriterium_LieferantSuchen" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jtfSuchkriterium_LieferantSuchen" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jcbSuchkriterium_LieferantSuchen" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
+                      <Component id="jtfSuchkriterium_LieferantSuchen" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="85" max="-2" attributes="0"/>
                   <Component id="jScrollPane7" min="-2" pref="200" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="jbAnzeigen_LieferantSuchen" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jbAbbrechen_LieferantSuchen" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jbAnzeigen_LieferantSuchen" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
+                      <Component id="jbAbbrechen_LieferantSuchen" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="32767" attributes="0"/>
               </Group>
@@ -121,13 +121,16 @@
         <Component class="javax.swing.JLabel" name="jLabel16">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Tahoma" size="18" style="0"/>
+              <Font name="Tahoma" size="24" style="0"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Lieferant Suchen"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="jbAbbrechen_LieferantSuchen">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="16" style="0"/>
+            </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/view/abbruch2.png"/>
             </Property>
@@ -141,6 +144,9 @@
         </Component>
         <Component class="javax.swing.JButton" name="jbAnzeigen_LieferantSuchen">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="16" style="0"/>
+            </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/view/anzeigen.png"/>
             </Property>
@@ -167,6 +173,11 @@
           </AuxValues>
         </Component>
         <Component class="javax.swing.JTextField" name="jtfSuchkriterium_LieferantSuchen">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="14" style="0"/>
+            </Property>
+          </Properties>
         </Component>
         <Container class="javax.swing.JScrollPane" name="jScrollPane7">
           <AuxValues>
