--- a/src/view/ZKSuchen.form
+++ b/src/view/ZKSuchen.form
@@ -35,11 +35,11 @@
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <EmptySpace min="0" pref="503" max="32767" attributes="0"/>
+          <EmptySpace min="0" pref="523" max="32767" attributes="0"/>
           <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
               <Group type="102" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="ZKSuchen" pref="489" max="32767" attributes="0"/>
+                  <Component id="ZKSuchen" pref="497" max="32767" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
@@ -66,24 +66,24 @@
                           <Group type="103" groupAlignment="1" max="-2" attributes="0">
                               <Group type="102" alignment="1" attributes="0">
                                   <EmptySpace min="-2" pref="448" max="-2" attributes="0"/>
-                                  <Component id="jbAnzeigen_ZKSuchen" min="-2" max="-2" attributes="0"/>
+                                  <Component id="jbAnzeigen_ZKSuchen" min="-2" pref="130" max="-2" attributes="0"/>
                                   <EmptySpace max="32767" attributes="0"/>
-                                  <Component id="jbAbbrechen_ZKSuchen" min="-2" max="-2" attributes="0"/>
+                                  <Component id="jbAbbrechen_ZKSuchen" min="-2" pref="130" max="-2" attributes="0"/>
                               </Group>
                               <Group type="103" alignment="1" groupAlignment="0" attributes="0">
                                   <Component id="jScrollPane9" alignment="0" min="-2" pref="672" max="-2" attributes="0"/>
                                   <Group type="102" alignment="0" attributes="0">
                                       <Group type="103" groupAlignment="0" attributes="0">
                                           <Component id="jLabel125" alignment="0" min="-2" max="-2" attributes="0"/>
-                                          <Component id="jcbSuchkriterium_ZKSuchen" alignment="0" min="-2" max="-2" attributes="0"/>
+                                          <Component id="jcbSuchkriterium_ZKSuchen" alignment="0" min="-2" pref="100" max="-2" attributes="0"/>
                                       </Group>
                                       <EmptySpace min="-2" pref="25" max="-2" attributes="0"/>
                                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                          <Component id="jtfSuchkriterium_ZKSuchen" alignment="0" max="32767" attributes="0"/>
-                                          <Component id="jcbAuftragsart_ZKSuchen" alignment="0" pref="150" max="32767" attributes="0"/>
+                                          <Component id="jtfSuchkriterium_ZKSuchen" alignment="0" min="-2" pref="150" max="-2" attributes="0"/>
+                                          <Component id="jcbAuftragsart_ZKSuchen" alignment="0" min="-2" pref="150" max="-2" attributes="0"/>
                                       </Group>
                                       <EmptySpace min="-2" pref="52" max="-2" attributes="0"/>
-                                      <Component id="jbSuchen_ZKSuchen" min="-2" pref="98" max="-2" attributes="0"/>
+                                      <Component id="jbSuchen_ZKSuchen" min="-2" pref="130" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
                           </Group>
@@ -93,7 +93,7 @@
                           <Component id="jLabel79" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <EmptySpace min="0" pref="321" max="32767" attributes="0"/>
+                  <EmptySpace min="0" pref="279" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -107,20 +107,20 @@
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel125" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jcbAuftragsart_ZKSuchen" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jcbAuftragsart_ZKSuchen" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="jcbSuchkriterium_ZKSuchen" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jtfSuchkriterium_ZKSuchen" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jbSuchen_ZKSuchen" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jcbSuchkriterium_ZKSuchen" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
+                      <Component id="jtfSuchkriterium_ZKSuchen" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
+                      <Component id="jbSuchen_ZKSuchen" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
                   <Component id="jScrollPane9" min="-2" pref="258" max="-2" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="jbAbbrechen_ZKSuchen" alignment="0" min="-2" max="-2" attributes="0"/>
-                      <Component id="jbAnzeigen_ZKSuchen" alignment="0" min="-2" max="-2" attributes="0"/>
+                      <Component id="jbAbbrechen_ZKSuchen" alignment="0" min="-2" pref="30" max="-2" attributes="0"/>
+                      <Component id="jbAnzeigen_ZKSuchen" alignment="0" min="-2" pref="30" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="32767" attributes="0"/>
               </Group>
@@ -130,6 +130,9 @@
       <SubComponents>
         <Component class="javax.swing.JButton" name="jbAbbrechen_ZKSuchen">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="16" style="0"/>
+            </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/view/abbruch2.png"/>
             </Property>
@@ -141,6 +144,9 @@
         </Component>
         <Component class="javax.swing.JButton" name="jbAnzeigen_ZKSuchen">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="16" style="0"/>
+            </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/view/anzeigen.png"/>
             </Property>
@@ -152,6 +158,9 @@
         </Component>
         <Component class="javax.swing.JButton" name="jbSuchen_ZKSuchen">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="16" style="0"/>
+            </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/view/lupe.png"/>
             </Property>
@@ -161,7 +170,7 @@
         <Component class="javax.swing.JLabel" name="jLabel79">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Tahoma" size="18" style="0"/>
+              <Font name="Tahoma" size="24" style="0"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Zahlungskonditionen Suchen"/>
           </Properties>
@@ -175,6 +184,9 @@
         </Component>
         <Component class="javax.swing.JComboBox" name="jcbSuchkriterium_ZKSuchen">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="14" style="0"/>
+            </Property>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="4">
                 <StringItem index="0" value="ZK-ID"/>
@@ -190,6 +202,9 @@
         </Component>
         <Component class="javax.swing.JComboBox" name="jcbAuftragsart_ZKSuchen">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="14" style="0"/>
+            </Property>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="4">
                 <StringItem index="0" value="Sofortauftrag"/>
@@ -204,6 +219,11 @@
           </AuxValues>
         </Component>
         <Component class="javax.swing.JTextField" name="jtfSuchkriterium_ZKSuchen">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="14" style="0"/>
+            </Property>
+          </Properties>
         </Component>
         <Container class="javax.swing.JScrollPane" name="jScrollPane9">
           <AuxValues>
