--- a/src/view/ArtikelBearbeiten.form
+++ b/src/view/ArtikelBearbeiten.form
@@ -23,12 +23,12 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="ArtikelBearbeiten" alignment="0" pref="855" max="32767" attributes="0"/>
+          <Component id="ArtikelBearbeiten" alignment="0" min="-2" pref="950" max="-2" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="ArtikelBearbeiten" alignment="0" pref="740" max="32767" attributes="0"/>
+          <Component id="ArtikelBearbeiten" alignment="0" min="-2" pref="800" max="-2" attributes="0"/>
       </Group>
     </DimensionLayout>
   </Layout>
@@ -36,7 +36,7 @@
     <Container class="javax.swing.JPanel" name="ArtikelBearbeiten">
       <Properties>
         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-          <Dimension value="[1200, 800]"/>
+          <Dimension value="[1200, 900]"/>
         </Property>
       </Properties>
 
@@ -49,7 +49,7 @@
                   <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
               </Group>
               <Group type="102" alignment="1" attributes="0">
-                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                  <EmptySpace min="0" pref="74" max="32767" attributes="0"/>
                   <Component id="jSeparator8" min="-2" pref="855" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
               </Group>
@@ -116,7 +116,7 @@
                       <Component id="jbAbbrechenArtikelBearbeiten" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                       <Component id="jbSpeichernArtikelBearbeiten" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="39" max="32767" attributes="0"/>
+                  <EmptySpace pref="99" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
