--- a/src/view/AuftragAnlegen.form
+++ b/src/view/AuftragAnlegen.form
@@ -23,12 +23,12 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="AuftragAnlegen" alignment="0" pref="1138" max="32767" attributes="0"/>
+          <Component id="AuftragAnlegen" min="-2" pref="950" max="-2" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="AuftragAnlegen" alignment="0" pref="834" max="32767" attributes="0"/>
+          <Component id="AuftragAnlegen" alignment="0" pref="800" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
   </Layout>
@@ -49,7 +49,7 @@
                   <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
               </Group>
               <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="46" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="1" attributes="0">
                       <Group type="102" alignment="1" attributes="0">
                           <Group type="103" groupAlignment="1" attributes="0">
@@ -67,6 +67,7 @@
                               <Component id="jScrollPane5" alignment="1" max="32767" attributes="0"/>
                               <Group type="102" alignment="1" attributes="0">
                                   <Group type="103" groupAlignment="0" attributes="0">
+                                      <Component id="jLabel25" alignment="0" min="-2" max="-2" attributes="0"/>
                                       <Group type="102" alignment="0" attributes="0">
                                           <Group type="103" groupAlignment="0" attributes="0">
                                               <Component id="jLabel2" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -81,10 +82,11 @@
                                               <Component id="jtfAuftragsid_aa" alignment="1" min="-2" pref="150" max="-2" attributes="0"/>
                                               <Component id="jcbStatus" alignment="0" min="-2" pref="150" max="-2" attributes="0"/>
                                           </Group>
+                                          <EmptySpace max="-2" attributes="0"/>
+                                          <Component id="jbLupeGPlID_AuftragAnlegen" min="-2" pref="35" max="-2" attributes="0"/>
                                       </Group>
-                                      <Component id="jLabel25" alignment="0" min="-2" max="-2" attributes="0"/>
                                   </Group>
-                                  <EmptySpace min="-2" pref="106" max="-2" attributes="0"/>
+                                  <EmptySpace min="-2" pref="80" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
                                       <Component id="jLabel19" alignment="0" min="-2" max="-2" attributes="0"/>
                                       <Component id="jLabel21" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -110,7 +112,7 @@
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="0" max="-2" attributes="0"/>
                   <Component id="jLabel7" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="jSeparator9" min="-2" pref="10" max="-2" attributes="0"/>
@@ -127,6 +129,7 @@
                       <Component id="jtfGPID_aa" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                       <Component id="jLabel21" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jftfErfassungsdatum_aa" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
+                      <Component id="jbLupeGPlID_AuftragAnlegen" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
@@ -146,14 +149,14 @@
                   <Component id="jLabel25" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="jScrollPane5" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="44" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
                   <Component id="Auftragsposition_AuftragAnlegen" min="-2" max="-2" attributes="0"/>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jbAbbrechen_aa" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                       <Component id="jSpeichern_aa" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="36" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -204,7 +207,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="16" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Gesch&#xe4;ftspartner:ID:"/>
+            <Property name="text" type="java.lang.String" value="Gesch&#xe4;ftspartner ID:"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="jtfGPID_aa">
@@ -219,7 +222,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="16" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Gesch&#xe4;ftspartner-Name:"/>
+            <Property name="text" type="java.lang.String" value="Gesch&#xe4;ftspartner Name:"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="jtfGPname_aa">
@@ -305,7 +308,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="16" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Status"/>
+            <Property name="text" type="java.lang.String" value="Status:"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JComboBox" name="jcbStatus">
@@ -328,7 +331,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="16" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Abschlussdatum"/>
+            <Property name="text" type="java.lang.String" value="Abschlussdatum:"/>
           </Properties>
         </Component>
         <Container class="javax.swing.JPanel" name="Auftragsposition_AuftragAnlegen">
@@ -348,16 +351,7 @@
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="102" alignment="0" attributes="0">
-                              <Component id="jScrollPane8" min="-2" pref="779" max="-2" attributes="0"/>
-                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="jbMinus_AuftragAnlegen" alignment="0" min="-2" pref="40" max="-2" attributes="0"/>
-                                  <Component id="jbPlus_AuftragAnlegen" alignment="0" min="-2" pref="40" max="-2" attributes="0"/>
-                              </Group>
-                              <EmptySpace max="32767" attributes="0"/>
-                          </Group>
-                          <Group type="102" alignment="0" attributes="0">
+                          <Group type="102" attributes="0">
                               <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                   <Group type="102" alignment="0" attributes="0">
                                       <Group type="103" groupAlignment="0" attributes="0">
@@ -377,8 +371,8 @@
                                   </Group>
                               </Group>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="jbLupe_AuftragAnlegen" min="-2" pref="35" max="-2" attributes="0"/>
-                              <EmptySpace min="-2" pref="75" max="-2" attributes="0"/>
+                              <Component id="jbLupeArtikelID_AuftragAnlegen" min="-2" pref="35" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="87" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Component id="jLabel122" alignment="0" min="-2" max="-2" attributes="0"/>
                                   <Component id="jLabel24" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -386,13 +380,19 @@
                               </Group>
                               <EmptySpace max="32767" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="jtfEinzelwert_AuftragAnlegen" alignment="1" min="-2" pref="150" max="-2" attributes="0"/>
                                   <Component id="jtfMenge_AuftragAnlegen" alignment="1" min="-2" pref="150" max="-2" attributes="0"/>
+                                  <Component id="jtfEinzelwert_AuftragAnlegen" alignment="1" min="-2" pref="150" max="-2" attributes="0"/>
                                   <Component id="jtfGesamtwert_AuftragAnlegen" alignment="1" min="-2" pref="150" max="-2" attributes="0"/>
                               </Group>
-                              <EmptySpace min="-2" pref="82" max="-2" attributes="0"/>
                           </Group>
+                          <Component id="jScrollPane8" min="-2" pref="779" max="-2" attributes="0"/>
                       </Group>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="jbMinus_AuftragAnlegen" alignment="0" min="-2" pref="40" max="-2" attributes="0"/>
+                          <Component id="jbPlus_AuftragAnlegen" alignment="0" min="-2" pref="40" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -428,18 +428,15 @@
                                           <Group type="103" alignment="0" groupAlignment="3" attributes="0">
                                               <Component id="jtfArtikelname_AuftragAnlegen" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                                               <Component id="jLabel123" alignment="3" min="-2" max="-2" attributes="0"/>
+                                              <Component id="jtfGesamtwert_AuftragAnlegen" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                                           </Group>
                                       </Group>
                                   </Group>
-                                  <Group type="102" alignment="0" attributes="0">
-                                      <Group type="103" groupAlignment="3" attributes="0">
-                                          <Component id="jLabel122" alignment="3" min="-2" max="-2" attributes="0"/>
-                                          <Component id="jtfEinzelwert_AuftragAnlegen" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
-                                      </Group>
-                                      <EmptySpace type="separate" max="-2" attributes="0"/>
-                                      <Component id="jtfGesamtwert_AuftragAnlegen" min="-2" pref="25" max="-2" attributes="0"/>
+                                  <Group type="103" alignment="0" groupAlignment="3" attributes="0">
+                                      <Component id="jLabel122" alignment="3" min="-2" max="-2" attributes="0"/>
+                                      <Component id="jtfEinzelwert_AuftragAnlegen" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                                   </Group>
-                                  <Component id="jbLupe_AuftragAnlegen" alignment="0" min="-2" pref="25" max="-2" attributes="0"/>
+                                  <Component id="jbLupeArtikelID_AuftragAnlegen" alignment="0" min="-2" pref="25" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
                               <Component id="jScrollPane8" min="-2" pref="173" max="-2" attributes="0"/>
@@ -480,7 +477,7 @@
                 </Property>
               </Properties>
             </Component>
-            <Component class="javax.swing.JButton" name="jbLupe_AuftragAnlegen">
+            <Component class="javax.swing.JButton" name="jbLupeArtikelID_AuftragAnlegen">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
                   <Image iconType="3" name="/view/lupe.png"/>
@@ -500,7 +497,7 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Tahoma" size="16" style="0"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Menge"/>
+                <Property name="text" type="java.lang.String" value="Menge:"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="jtfArtikelname_AuftragAnlegen">
@@ -525,7 +522,7 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Tahoma" size="16" style="0"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Einzelwert"/>
+                <Property name="text" type="java.lang.String" value="Einzelwert:"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel123">
@@ -557,7 +554,7 @@
 
               <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
               <SubComponents>
-                <Component class="javax.swing.JTable" name="jTable2">
+                <Component class="javax.swing.JTable" name="jTAuftragsposition">
                   <Properties>
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                       <Table columnCount="6" rowCount="200">
@@ -612,6 +609,13 @@
         <Component class="javax.swing.JFormattedTextField" name="jftfLieferdatum_aa">
         </Component>
         <Component class="javax.swing.JFormattedTextField" name="jftfErfassungsdatum_aa">
+        </Component>
+        <Component class="javax.swing.JButton" name="jbLupeGPlID_AuftragAnlegen">
+          <Properties>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="3" name="/view/lupe.png"/>
+            </Property>
+          </Properties>
         </Component>
       </SubComponents>
     </Container>
