--- a/src/view/AuftragAnzeigen.form
+++ b/src/view/AuftragAnzeigen.form
@@ -23,26 +23,15 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <EmptySpace min="0" pref="1042" max="32767" attributes="0"/>
-          <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
-              <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace max="-2" attributes="0"/>
-                  <Component id="AuftragAnzeigen" min="-2" pref="1018" max="-2" attributes="0"/>
-                  <EmptySpace max="32767" attributes="0"/>
-              </Group>
+          <Group type="102" alignment="0" attributes="0">
+              <Component id="AuftragAnzeigen" min="-2" pref="950" max="-2" attributes="0"/>
+              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <EmptySpace min="0" pref="822" max="32767" attributes="0"/>
-          <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
-              <Group type="102" attributes="0">
-                  <EmptySpace max="-2" attributes="0"/>
-                  <Component id="AuftragAnzeigen" pref="812" max="32767" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
-              </Group>
-          </Group>
+          <Component id="AuftragAnzeigen" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
   </Layout>
@@ -100,7 +89,9 @@
                               </Group>
                               <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                   <Group type="102" alignment="0" attributes="0">
-                                      <EmptySpace min="-2" pref="113" max="-2" attributes="0"/>
+                                      <EmptySpace min="-2" pref="7" max="-2" attributes="0"/>
+                                      <Component id="jbLupeAuftragsID_AuftragAnzeigen" min="-2" pref="35" max="-2" attributes="0"/>
+                                      <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
                                       <Group type="103" groupAlignment="0" attributes="0">
                                           <Group type="102" alignment="0" attributes="0">
                                               <Component id="jlLieferdatum" min="-2" max="-2" attributes="0"/>
@@ -146,7 +137,7 @@
                           </Group>
                       </Group>
                   </Group>
-                  <EmptySpace pref="84" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -172,6 +163,7 @@
                                       <Component id="jlAuftragsid" alignment="3" min="-2" max="-2" attributes="0"/>
                                       <Component id="jtfAuftragsid_az" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                                       <Component id="jlAuftragsart" alignment="3" min="-2" max="-2" attributes="0"/>
+                                      <Component id="jbLupeAuftragsID_AuftragAnzeigen" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                                       <Component id="jcbAuftragsart_az" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                                   </Group>
                                   <EmptySpace type="separate" max="-2" attributes="0"/>
@@ -242,7 +234,7 @@
                       <Component id="jbBearbeiten_az" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                       <Component id="jbSpeichern_az" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="49" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -253,7 +245,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="16" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Auftrags-Nr:"/>
+            <Property name="text" type="java.lang.String" value="Auftrags-ID:"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="jtfAuftragsid_az">
@@ -292,28 +284,6 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Auftragsart:"/>
           </Properties>
-        </Component>
-        <Component class="javax.swing.JComboBox" name="jcbAuftragsart_az">
-          <Properties>
-            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Tahoma" size="14" style="0"/>
-            </Property>
-            <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="5">
-                <StringItem index="0" value=""/>
-                <StringItem index="1" value="Barauftrag"/>
-                <StringItem index="2" value="Sofortauftrag"/>
-                <StringItem index="3" value="Terminauftrag"/>
-                <StringItem index="4" value="Bestellauftrag"/>
-              </StringArray>
-            </Property>
-          </Properties>
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jcbAuftragsart_azActionPerformed"/>
-          </Events>
-          <AuxValues>
-            <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
-          </AuxValues>
         </Component>
         <Component class="javax.swing.JLabel" name="jlGPName">
           <Properties>
@@ -444,7 +414,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="16" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Zahlungskondition-ID"/>
+            <Property name="text" type="java.lang.String" value="Zahlungskondition-ID:"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="jtfZKID_az">
@@ -462,7 +432,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="16" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Status"/>
+            <Property name="text" type="java.lang.String" value="Status:"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JComboBox" name="jcbStatus_az">
@@ -522,7 +492,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="16" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Auftragswert(brutto)"/>
+            <Property name="text" type="java.lang.String" value="Auftragswert(brutto):"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="jtfAuftragswertbrutto_az">
@@ -537,7 +507,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="16" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Auftragswert (netto)"/>
+            <Property name="text" type="java.lang.String" value="Auftragswert (netto):"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="jtfAuftragswertnetto_az">
@@ -554,6 +524,35 @@
         <Component class="javax.swing.JFormattedTextField" name="jftfAbschlussdatum_az">
         </Component>
         <Component class="javax.swing.JFormattedTextField" name="jftfErfassungsdatum_az">
+        </Component>
+        <Component class="javax.swing.JButton" name="jbLupeAuftragsID_AuftragAnzeigen">
+          <Properties>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="3" name="/view/lupe.png"/>
+            </Property>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JComboBox" name="jcbAuftragsart_az">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="14" style="0"/>
+            </Property>
+            <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+              <StringArray count="5">
+                <StringItem index="0" value=""/>
+                <StringItem index="1" value="Barauftrag"/>
+                <StringItem index="2" value="Sofortauftrag"/>
+                <StringItem index="3" value="Terminauftrag"/>
+                <StringItem index="4" value="Bestellauftrag"/>
+              </StringArray>
+            </Property>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jcbAuftragsart_azActionPerformed"/>
+          </Events>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+          </AuxValues>
         </Component>
       </SubComponents>
     </Container>
